Resolving excessive spacing issue

--- a/article.less
+++ b/article.less
@@ -31,7 +31,6 @@
 	.new-article-section {
 		.row& {
 			padding: (@v-dflt-spcng / 2);
-			margin-top: @v-dflt-spcng;
 			h1,
 			h2,
 			h3,
